# openrpc-client-generator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
openrpcclientgenerator/: __init__.py  _common.py  _generator.py  _python.py  _typescript.py  _util.py  client_factory.py  common.py  generator.py  orpc  orpccg  python.py  typescript.py  util.py
openrpcclientgenerator/console/: discover.py  generate.py
openrpcclientgenerator/generators/: __init__.py  _common.py  _generator.py  csharp.py  dotnet.py  kotlin.py  python.py  transports.py  typescript.py
openrpcclientgenerator/python/: __init__.py  _common.py  _get_client.py  _get_models.py  _project_files.py
openrpcclientgenerator/templates/: __init__.py
openrpcclientgenerator/templates/csharp/: __init__.py  code.py
openrpcclientgenerator/templates/dotnet/: code.py  dotnet_files.py
openrpcclientgenerator/templates/kotlin/: __init__.py  code.py
openrpcclientgenerator/templates/python/: __init__.py  build_files.py  client.j2  client_module.j2  code.py  models.j2  readme.j2  setup.j2
openrpcclientgenerator/templates/typescript/: __init__.py  build_files.py  client.j2  client_module.j2  code.py  index.j2  index.py  models.j2  package_json.j2  prettier.py  readme.j2
openrpcclientgenerator/typescript/: __init__.py  _common.py  _get_client.py  _get_models.py  _project_files.py  _templates.py
src/openrpcclientgenerator/: client_factory.py  util.py
src/openrpcclientgenerator/generators/: csharp.py  python.py  typescript.py
src/openrpcclientgenerator/templates/csharp/: dotnet_files.py
src/openrpcclientgenerator/templates/kotlin/: code.py
src/openrpcclientgenerator/templates/python/: build_files.py  clients.py  code.py
src/openrpcclientgenerator/templates/typescript/: build_files.py  code.py  index.py
test/: openrpc.json  tests.py
tests/: common.py  math_openrpc.json  openrpc.json  test_dotnet.py  test_models.py  test_openrpc.json  test_openrpc_client_generator.py  test_python.py  test_schema_to_python.py  test_schema_to_typescript.py  test_typescript.py
tests/integration/: integration_test.py  test_openrpc.json  test_openrpc_client_generator.py  test_server.py
