[tool.poetry]
name = "openrpcclientgenerator"
version = "0.29.2"
description = "Generate clients from an Open RPC document."
readme = "README.md"
repository = "https://gitlab.com/mburkard/openrpc-client-generator"
homepage = "https://gitlab.com/mburkard/openrpc-client-generator"
license = "AGPL-3.0-or-later"
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3"]

[tool.poetry.dependencies]
python = "^3.10"
case-switcher = "^1.2.1"
openrpc = "^6.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
safety = "^2.2.0"
mypy = "^0.991"
flake8 = "^6.0.0"
coverage = "^7.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
