[tool.poetry]
name = "openrpcclientgenerator"
version = "0.42.3"
description = "Generate clients from an Open-RPC document."
readme = "README.md"
repository = "https://gitlab.com/mburkard/openrpc-client-generator"
homepage = "https://gitlab.com/mburkard/openrpc-client-generator"
license = "AGPL-3.0-or-later"
authors = ["Matthew Burkard <matthewjburkard@gmail.com>"]
classifiers = ["Programming Language :: Python :: 3"]

[tool.poetry.dependencies]
python = "^3.10"
case-switcher = "^1.2.1"
openrpc = "^8.0.1"
Jinja2 = "^3.1.2"
httpx = "^0.24.1"
black = "^23.7.0"
pydantic = {extras = ["email"], version = "^2.3.0"}
pydantic-extra-types = "^2.1.0"
phonenumbers = "^8.13.20"
isort = "^5.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
mypy = "^1.1.1"
coverage = "^7.1.0"
ruff = "^0.0.287"
jsonrpc2-pyclient = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
select = [
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "D",
    "E",
    "EM",
    "ERA",
    "F",
    "FBT",
    "FA",
    "FLY",
    "FIX",
    "ICN",
    "INT",
    "ISC",
    "N",
    "PL",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "S",
    "SIM",
    "T10",
    "TD",
    "TRY",
]

ignore = ["D203", "D213"]
