[metadata]
name = openrpc-client-generator
version = 0.4.2
author = Matthew Burkard
author_email = matthewjburkard@gmail.com
description = Generate clients from an Open RPC document.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/mburkard/openrpc-client-generator
classifiers = Programming Language :: Python :: 3

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.9
install_requires =
	openrpc~1

[options.packages.find]
where = src
